--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="PREFERENCE_FILE_KEY">preferenceFileKeyMonsterArena</string>
+    <string name="PREFERENCE_USERID_KEY">preferenceUserIdKeyMonsterArena</string>
 </resources>
