--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="create_account">Create Account</string>
     <string name="cancel">Cancel</string>
+    <string name="select_arena">Select Arena</string>
+    <string name="view_monsters">View Monsters</string>
+    <string name="manage_users">Manage Users</string>
+    <string name="welcome">Welcome,</string>
 </resources>
