--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="return_battle_details">Return</string>
     <string name="return_battle_history">Return</string>
     <string name="battle_history_title">Battle History</string>
+    <string name="select_your_arena">Select Your Arena</string>
+    <string name="arena_1">Arena 1</string>
+    <string name="arena_2">Arena 2</string>
+    <string name="arena_3">Arena 3</string>
+    <string name="home">Home</string>
+    <string name="back">Back</string>
 </resources>
