Monsters now only display if user owns them.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="exitButtonText">Exit</string>
     <string name="monster_info">Monster Info</string>
     <string name="monster_name">Monster Name</string>
+    <string name="no_monsters_for_user">\"No Monsters to show.\"</string>
 </resources>
